# InsuranceCompanyEmulator

./: CMakeLists.txt  README.md  main.cpp
src/: header.h
src/Back/: Company.cpp  Company.h
src/Front/: App.cpp  App.h  ExpenseLabel.cpp  ExpenseLabel.h  IncomeLabel.cpp  IncomeLabel.h  MainWindow.cpp  MainWindow.h
